2011-12-07
* add unpacking for executables packed with UPX

2011-12-06
* enable yaffs2 unpacking

2011-12-05
* remove unused database

2011-12-01
* don't follow symlinks for chmod
* unsquashfs from openwrt with lzma cannot unpack to an existing directory, so
use an extra directory to work around that limitation
* add alternative LZMA identifier that is sometimes used in OpenWrt, rework
LZMA unpacking to work with multiple identifiers

2011-11-25
* add jdeserialize to bat-extratools
* add unpacking for Java serialized files using jdeserialize

2011-11-01
* treat Groovy files as Java
* treat JSP files as Java

2011-10-30
* add dedexer to bat-extratools

2011-10-21
* add field 'envvars' to pass around extra information to scans. These should
be put into the environment in some cases (ranking scan)

2011-10-20
* add string constant extraction for Dalvik files, using dedexer. This needs
to be added to bat-extratools

2011-10-19
* add string constant extraction for Java class files, so we can do better
matching in the ranking code for Java.

2011-10-18
* release version 5.0
* release first version of bat-extratools, keep it in sync version wise with
BAT

2011-10-17
* RPM specfile fixes
* enable squashfs variants, plus fix bug in Squashfs LZMA (Broadcom variant)
* add Squashfs LZMA (slax.org/Ralink variant)
* add Debian package installation files for bat-extratools

2011-09-25
* add more documentation to the user guide

2011-09-24
* update version of Ninka that's used, also scan with FOSSology by default.
* scan .qml files and treat them as C

2011-09-23
* add unpack ZIP files to batchextractprogramstrings.py

2011-09-22
* add more sections to the user guide

2011-09-21
* started work on incorporating snippets of documentation into a comprehensive
user guide, giving it a much needed quality boost as well.

2011-09-20
* finished SWF unpacking. Right now it is assumed that the entire file is a
flash file and it's compressed.

2011-09-19
* finished JFFS2 support

2011-09-18