@@ -1,5 +1,6 @@
 2011-12-07
 * add unpacking for executables packed with UPX
+* rewrite tar unpacking to standard format
 
 2011-12-06
 * enable yaffs2 unpacking
